<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <!-- summary -->
    <include layout="@layout/app_summary_layout"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>		
	
	<!-- the market title -->
	<include layout="@layout/market_title_layout"
		android:layout_gravity="top|right"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>	
			 		 
	<RelativeLayout android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
	    
	    <!-- screen shot -->	
	    <TextView android:id="@+id/detail_tv_screenshot" 
	    	style="@style/TextStyleNormal"
	    	android:text="@string/appdetails_screenshot"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_marginTop="100dip"
	    	android:layout_marginLeft="@dimen/screen_horz_margin"/>
	    
	    <ImageView android:id="@+id/detail_screenshort_1" 
	    	android:src="@drawable/test"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_alignLeft="@id/detail_tv_screenshot"
	    	android:layout_below="@id/detail_tv_screenshot"
	    	android:layout_marginTop="10dip"/>
    	
    	<ImageView android:id="@+id/detail_screenshort_2" 
	    	android:src="@drawable/test"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_toRightOf="@id/detail_screenshort_1"
	    	android:layout_marginLeft="20dip"
	    	android:layout_alignTop="@id/detail_screenshort_1"/>
    	
    	<!-- remote control -->
	    <TextView android:id="@+id/detail_remotecntl_title" 
	    	style="@style/TextStyleNormal"
	    	android:text="@string/appdetails_remotecntl"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_marginLeft="@dimen/screen_horz_margin"
	    	android:layout_below="@id/detail_screenshort_1"
	    	android:layout_marginTop="20dip"/>
	    
	    <TextView android:id="@+id/detail_rc_desc" 
	    	style="@style/TextStyleSmall"
	    	android:layout_width="wrap_content"
	    	android:text="@string/appdetails_remotecntl"
	    	android:layout_height="wrap_content"
	    	android:layout_marginLeft="@dimen/screen_horz_margin"
	    	android:layout_below="@id/detail_remotecntl_title"
	    	android:layout_marginTop="5dip"/>
	    
	    <!-- review -->
	    <TextView android:id="@+id/detail_review_title" 
	    	style="@style/TextStyleNormal"
	    	android:text="@string/appdetails_review_title"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_marginLeft="280dip"
	    	android:layout_marginTop="100dip" />
	    	
	    <TextView android:id="@+id/detail_review_desc" 
	    	style="@style/TextStyleSmall"
	    	android:text="护法SKT1开局后开2矿，石头的空投影刀战术所得有限。护法的一波推进赶走石头的兵后开出3矿，石头速出VA后也开出3矿。神族第一波传送稍稍打乱护法节奏，之后石头憋出大部队配合2把冰冻把优势继续扩大。经过几番缠绵护法抵抗无力，被A进主家后GG"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_alignLeft="@id/detail_review_title"
	    	android:layout_marginRight="@dimen/screen_horz_margin"
	    	android:layout_below="@+id/detail_review_title"
	    	android:layout_marginTop="10dip"
	    	android:ellipsize="end"/>
	    		
	    <!-- install button -->	
	    <Button android:id="@+id/applist_btn_detail" 
	    	android:text="@string/market_downloadinstall"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_alignParentBottom="true"
	    	android:layout_alignParentRight="true"
	    	android:layout_marginRight="@dimen/screen_horz_margin"
	    	android:layout_marginBottom="@dimen/screen_vert_margin" />	
	    		
	</RelativeLayout>

</merge>
