<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <!-- summary -->
    <include layout="@layout/app_summary_layout"
    	android:id="@+id/the_summary_layout"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>		
	
	<!-- the market title -->
	<include layout="@layout/market_title_layout"
		android:layout_gravity="top|right"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>	
			 		 
	<RelativeLayout android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
	    
	    <!-- install button -->
	    <Button android:id="@+id/main_btn_install" 
	    	android:text="@string/main_btn_install"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_below="@id/the_summary_layout"
	    	android:layout_marginLeft="150dip"
	    	android:layout_marginTop="80dip"/>

	    <!-- description -->	
	    <TextView android:id="@+id/main_app_desc"
	    	style="@style/TextStyleSmall"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_below="@id/main_btn_install"
	    	android:layout_marginLeft="@dimen/screen_horz_margin"
	    	android:layout_marginRight="@dimen/screen_horz_margin"
	    	android:maxHeight="70dip"
	    	android:ellipsize="end"/>		
	    
	    <!-- grid -->
	    <ImageView android:id="@+id/main_appimage_1" 
	    	android:layout_width="@dimen/main_image_side"
	    	android:layout_height="@dimen/main_image_side"
	    	android:layout_below="@id/main_app_desc"
			android:layout_marginTop="10dip"
			android:layout_marginLeft="@dimen/screen_horz_margin"
			android:focusable="true" />	
			
		<ImageView android:id="@+id/main_appimage_2" 
	    	android:layout_width="@dimen/main_image_side"
	    	android:layout_height="@dimen/main_image_side"
			android:layout_alignTop="@id/main_appimage_1"
			android:layout_toRightOf="@id/main_appimage_1"
			android:layout_marginLeft="@dimen/main_image_spacing"
			android:focusable="true" />		
			
		<ImageView android:id="@+id/main_appimage_3" 
	    	android:layout_width="@dimen/main_image_side"
	    	android:layout_height="@dimen/main_image_side"
			android:layout_alignTop="@id/main_appimage_2"
			android:layout_toRightOf="@id/main_appimage_2"
			android:layout_marginLeft="@dimen/main_image_spacing"
			android:focusable="true" />	
			
		<ImageView android:id="@+id/main_appimage_4" 
	    	android:layout_width="@dimen/main_image_side"
	    	android:layout_height="@dimen/main_image_side"
			android:layout_alignTop="@id/main_appimage_3"
			android:layout_toRightOf="@id/main_appimage_3"
			android:layout_marginLeft="@dimen/main_image_spacing"
			android:focusable="true" />	
			
		<ImageView android:id="@+id/main_appimage_5" 
	    	android:layout_width="@dimen/main_image_side"
	    	android:layout_height="@dimen/main_image_side"
			android:layout_alignTop="@id/main_appimage_4"
			android:layout_toRightOf="@id/main_appimage_4"
			android:layout_marginLeft="@dimen/main_image_spacing"
			android:focusable="true" />	
			
		<ImageView android:id="@+id/main_appimage_6" 
	    	android:layout_width="@dimen/main_image_side"
	    	android:layout_height="@dimen/main_image_side"
			android:layout_alignTop="@id/main_appimage_5"
			android:layout_toRightOf="@id/main_appimage_5"
			android:layout_marginLeft="@dimen/main_image_spacing"
			android:focusable="true" />	
			
		<ImageView android:id="@+id/main_appimage_7" 
	    	android:layout_width="@dimen/main_image_side"
	    	android:layout_height="@dimen/main_image_side"
			android:layout_alignTop="@id/main_appimage_6"
			android:layout_toRightOf="@id/main_appimage_6"
			android:layout_marginLeft="@dimen/main_image_spacing"
			android:focusable="true" />	
			
		<ImageView android:id="@+id/main_appimage_8" 
	    	android:layout_width="@dimen/main_image_side"
	    	android:layout_height="@dimen/main_image_side"
			android:layout_alignTop="@id/main_appimage_7"
			android:layout_toRightOf="@id/main_appimage_7"
			android:layout_marginLeft="@dimen/main_image_spacing"
			android:focusable="true" />							

	    <!-- bottom function buttons -->	
	    <Button android:id="@+id/main_btn_download_page"
	    	android:text="@string/main_btn_download_page"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:layout_marginRight="30dip"
			android:layout_alignParentBottom="true"
			android:layout_marginBottom="15dip" />	
			
		<Button android:id="@+id/main_btn_update_page"
			android:text="@string/main_btn_update_page"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_toLeftOf="@id/main_btn_download_page"
			android:layout_marginRight="10dip"
			android:layout_alignTop="@id/main_btn_download_page" />
		
		<Button android:id="@+id/main_btn_applist_page"
			android:text="@string/main_btn_applist_page"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_toLeftOf="@id/main_btn_update_page"
			android:layout_marginRight="10dip"
			android:layout_alignTop="@id/main_btn_update_page" />			  		
	</RelativeLayout>

</merge>
