<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">			
			 		 
	<RelativeLayout android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
	    
	    <!-- title image -->
    	<ImageView android:id="@+id/detail_iv_title" 
    		android:src="@drawable/detail_title"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_alignParentRight="true"
	    	android:layout_marginRight="@dimen/screen_horz_margin"
	    	android:layout_marginTop="40dip" />	
	    	
	    <!-- right background -->
	    <ImageView android:id="@+id/detail_right_bkgnd" 
    		android:src="@drawable/app_list_right_bg"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_alignRight="@id/detail_iv_title"
	    	android:layout_below="@id/detail_iv_title" />
	    
	    <!-- review -->
	    <TextView android:id="@+id/detail_review_title" 
	    	style="@style/TextStyleLarge"
	    	android:text="@string/appdetails_review_title"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_alignLeft="@id/detail_right_bkgnd"
	    	android:layout_marginLeft="10dip"
	    	android:layout_alignTop="@id/detail_right_bkgnd"
	    	android:layout_marginTop="5dip" />
	    
	    <!-- install button -->	
	    <Button android:id="@+id/detail_btn_install" 
	    	android:text="@string/market_downloadinstall"
	    	style="@style/ButtonTextNormal"
			android:background="@drawable/large_button_selector"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_alignRight="@id/detail_right_bkgnd"
	    	android:layout_marginRight="10dip"
	    	android:layout_alignBottom="@id/detail_right_bkgnd"
	    	android:layout_marginBottom="5dip" />
	    	
	    <!-- review details -->
	    <TextView android:id="@+id/detail_review_desc" 
	    	style="@style/TextStyleSmall"
	    	android:layout_width="0dip"
	    	android:layout_height="0dip"
	    	android:layout_alignLeft="@id/detail_review_title"
	    	android:layout_below="@+id/detail_review_title"
	    	android:layout_marginTop="5dip"
	    	android:layout_alignRight="@id/detail_right_bkgnd"
	    	android:layout_marginRight="10dip"
	    	android:layout_above="@id/detail_btn_install"
	    	android:layout_marginBottom="10dip" />
	    					
	    <!-- left background -->
	    <ImageView android:id="@+id/detail_left_bkgnd" 
    		android:src="@drawable/app_list_left_bg"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_toLeftOf="@id/detail_right_bkgnd"
	    	android:layout_marginRight="10dip"
	    	android:layout_alignTop="@id/detail_iv_title"
			android:focusable="false" />
		
		<!-- summary -->
	    <include android:id="@+id/the_summary_layout"
	    	layout="@layout/app_summary_layout"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_alignLeft="@id/detail_left_bkgnd"
			android:layout_alignTop="@id/detail_left_bkgnd"
			android:layout_marginLeft="20dip"
			android:layout_marginTop="5dip" />
				
	    <!-- screen shot -->	
	    <TextView android:id="@+id/detail_tv_screenshot" 
	    	style="@style/TextStyleSmall"
	    	android:text="@string/appdetails_screenshot"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_alignLeft="@id/the_summary_layout"
	    	android:layout_below="@id/the_summary_layout" />
	    
	    <ImageView android:id="@+id/detail_screenshort_1" 
	    	android:layout_width="120dip"
	    	android:layout_height="72dip"
	    	android:layout_alignLeft="@id/detail_left_bkgnd"
	    	android:layout_marginLeft="5dip"
	    	android:layout_below="@id/detail_tv_screenshot"
	    	android:layout_marginTop="10dip"/>
    	
    	<ImageView android:id="@+id/detail_screenshort_2" 
	    	android:layout_width="120dip"
	    	android:layout_height="72dip"
	    	android:layout_alignTop="@id/detail_screenshort_1"
	    	android:layout_toRightOf="@id/detail_screenshort_1"
	    	android:layout_marginLeft="5dip"/>
	    	
    	<!-- remote control -->
	    <TextView android:id="@+id/detail_remotecntl_title" 
	    	style="@style/TextStyleSmall"
	    	android:text="@string/appdetails_remotecntl"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_alignLeft="@id/the_summary_layout"
	    	android:layout_below="@id/detail_screenshort_1"
	    	android:layout_marginTop="15dip"/>
	    
	    <RatingBar android:id="@+id/detail_ratingbar"
			style="@style/CustomRatingBar"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/detail_remotecntl_title"
	        android:layout_marginTop="5dip"
	        android:layout_alignLeft="@id/the_summary_layout"
	        android:numStars="4"
	        android:stepSize="1.0"/>
        
	    <TextView android:id="@+id/detail_rc_desc" 
	    	style="@style/TextStyleSmall"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_toRightOf="@id/detail_ratingbar"
	    	android:layout_marginLeft="5dip"
	    	android:layout_alignBottom="@id/detail_ratingbar"/>
	    		
	</RelativeLayout>

</merge>
